--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>VDT_AggregateResultIterable</members>
+        <members>VDT_AggregateResultIterator</members>
         <members>VDT_AnalysisDashboardFilterController</members>
         <members>VDT_AnalysisDashboardFilterCtrlTest</members>
         <members>VDT_AttachmentSelector</members>
@@ -25,6 +27,9 @@
         <members>VDT_DateRangePickerTest</members>
         <members>VDT_EmailService</members>
         <members>VDT_EmailTemplateSelector</members>
+        <members>VDT_FieldLevelSecurityBatch</members>
+        <members>VDT_FieldLevelSecurityBuilder</members>
+        <members>VDT_FieldLevelSecurityController</members>
         <members>VDT_FieldSummary</members>
         <members>VDT_FieldSummarySelector</members>
         <members>VDT_FieldValuesOccurrencesBatch</members>
@@ -57,9 +62,16 @@
         <members>VDT_RecordTypeSelector</members>
         <members>VDT_RecordTypeService</members>
         <members>VDT_TabsController</members>
+        <members>VDT_Territory2Selector</members>
+        <members>VDT_TerritoryAnalysisBuilder</members>
+        <members>VDT_TerritoryAnalysisController</members>
+        <members>VDT_TerritoryAnalysisExportBatch</members>
+        <members>VDT_TerritoryManagementBatch</members>
         <members>VDT_ToolingAPIService</members>
         <members>VDT_ToolingCustomObjectResponse</members>
         <members>VDT_ToolingPageLayoutResponse</members>
+        <members>VDT_TransactionResultSelector</members>
+        <members>VDT_TransactionResultService</members>
         <members>VDT_TriggerHandler</members>
         <members>VDT_UserDataFactory</members>
         <members>VDT_VeevaUsersController</members>
@@ -108,6 +120,7 @@
         <members>VDT_KPI_Configuration.Onekey_aligned_to_territories</members>
         <members>VDT_KPI_Configuration.Onekey_vs_Non_One_Key</members>
         <members>VDT_KPI_Configuration.Onekey_without_address</members>
+        <members>VDT_Object_Date_Field_Mapping.Call2_vod_c</members>
         <members>VDT_Object_Product_Field_Mapping.EM_Event_vod_c</members>
         <members>VDT_Query.OCE_AccountTerritoryProduct</members>
         <members>VDT_Query.OCE_Account_Goal</members>
@@ -143,11 +156,12 @@
         <members>VDT_Object_Product_Field_Mapping__mdt</members>
         <members>VDT_Query__mdt</members>
         <members>VDT_Tab__mdt</members>
+        <members>VDT_Territory_Range_Filter__mdt</members>
+        <members>VDT_Transaction_Result__c</members>
         <name>CustomObject</name>
     </types>
     <types>
         <members>VDT_Data_Calculation__c</members>
-        <members>VDT_Field_Summary__c</members>
         <members>VDT_Log_Event__c</members>
         <members>Veeva_Diagnostic_Tool</members>
         <members>Veeva_Diagnostic_Tool_VF</members>
@@ -155,20 +169,94 @@
     </types>
     <types>
         <members>VDT_EmailTemplates/VDT_FieldCamparisonCalculationFinished</members>
+        <members>VDT_EmailTemplates/VDT_FieldLevelSecurityFinished</members>
         <members>VDT_EmailTemplates/VDT_FieldsOccurrencesFinished</members>
         <members>VDT_EmailTemplates/VDT_MasterAnalysisCalculationFinished</members>
+        <members>VDT_EmailTemplates/VDT_TerritoryAnalysisFinished</members>
+        <members>VDT_EmailTemplates/VDT_TerritoryExportCompleted</members>
         <name>EmailTemplate</name>
     </types>
     <types>
-        <members>*</members>
+        <members>vdt_analysisDashboardFilter</members>
+        <members>vdt_appHeader</members>
+        <members>vdt_autocompleteInput</members>
+        <members>vdt_calculationButton</members>
+        <members>vdt_calculationLogs</members>
+        <members>vdt_calculationLogsFilter</members>
+        <members>vdt_calculationMonitoring</members>
+        <members>vdt_csvUtil</members>
+        <members>vdt_datatable</members>
+        <members>vdt_dateRangePicker</members>
+        <members>vdt_enrichedText</members>
+        <members>vdt_fieldDetailLevelSummary</members>
+        <members>vdt_fieldLevelSecurityAnalysis</members>
+        <members>vdt_fieldLevelSecurityFilter</members>
+        <members>vdt_fieldLevelSecurityTable</members>
+        <members>vdt_fieldsHighLevelSummary</members>
+        <members>vdt_home</members>
+        <members>vdt_homeGraphs</members>
+        <members>vdt_illustrationProvider</members>
+        <members>vdt_monthYearPicker</members>
+        <members>vdt_numberKpiIndicator</members>
+        <members>vdt_objects</members>
+        <members>vdt_objectsCalculation</members>
+        <members>vdt_objectsCalculationFilter</members>
+        <members>vdt_objectsDashboard</members>
+        <members>vdt_objectsFieldValueOccurence</members>
+        <members>vdt_objectsFieldsUsageChart</members>
+        <members>vdt_onekeyAnalysisDetails</members>
+        <members>vdt_onekeyAnalysisSummary</members>
+        <members>vdt_onekeyCountryInput</members>
+        <members>vdt_onekeyData</members>
+        <members>vdt_onekeyDetailFilters</members>
+        <members>vdt_onekeyFilters</members>
+        <members>vdt_onekeyGraphs</members>
+        <members>vdt_onekeyHcoFilters</members>
+        <members>vdt_onekeyHcpFilters</members>
+        <members>vdt_onekeyLogs</members>
+        <members>vdt_onekeyLogsFilter</members>
+        <members>vdt_onekeyProductFilters</members>
+        <members>vdt_onekeyProgressBar</members>
+        <members>vdt_orgConnection</members>
+        <members>vdt_paginationItem</members>
+        <members>vdt_paginator</members>
+        <members>vdt_popover</members>
+        <members>vdt_productAdoptionAnalysis</members>
+        <members>vdt_productAdoptionLogs</members>
+        <members>vdt_productAdoptionLogsFilter</members>
+        <members>vdt_productAdoptionTable</members>
+        <members>vdt_productAdoptionTableFilters</members>
+        <members>vdt_productAdoptionTree</members>
+        <members>vdt_productsAndHierarchy</members>
+        <members>vdt_profileIcon</members>
+        <members>vdt_profileOptions</members>
+        <members>vdt_sidebar</members>
+        <members>vdt_tabItem</members>
+        <members>vdt_tabs</members>
+        <members>vdt_territoryAnalysis</members>
+        <members>vdt_territoryAnalysisFilter</members>
+        <members>vdt_territoryAnalysisTree</members>
+        <members>vdt_territoryLogs</members>
+        <members>vdt_territoryLogsFilter</members>
+        <members>vdt_treeCombobox</members>
+        <members>vdt_unusedFieldsOnLayoutChart</members>
+        <members>vdt_utils</members>
+        <members>vdt_veevaUsers</members>
+        <members>vdt_workspace</members>
         <name>LightningComponentBundle</name>
     </types>
     <types>
-        <members>*</members>
+        <members>vdt_tabs</members>
+        <members>vdt_calculationData</members>
+        <members>vdt_hcoFilter</members>
+        <members>vdt_hcpFilter</members>
+        <members>vdt_onekeyCountryChannel</members>
+        <members>vdt_productFilter</members>
+        <members>vdt_refreshMonitoring</members>
         <name>LightningMessageChannel</name>
     </types>
     <types>
-        <members>*</members>
+        <members>VDT_ToolingREST</members>
         <name>NamedCredential</name>
     </types>
     <types>
@@ -176,10 +264,13 @@
         <name>PermissionSet</name>
     </types>
     <types>
+        <members>VDT_Data_Calculation__c.VDT_Field_Level_Security_Analysis</members>
         <members>VDT_Data_Calculation__c.VDT_Master_Data_Analysis</members>
         <members>VDT_Data_Calculation__c.VDT_Object_Field_Analysis</members>
         <members>VDT_Data_Calculation__c.VDT_Object_Field_Value_Occurrence</members>
         <members>VDT_Data_Calculation__c.VDT_Product_Adoption</members>
+        <members>VDT_Data_Calculation__c.VDT_Territory_Analysis</members>
+        <members>VDT_Transaction_Result__c.VDT_Territory_Analysis</members>
         <name>RecordType</name>
     </types>
     <types>
